# winston-wolf

./: .gitignore  CLAUDE.md  README.md  VISION.md  foundation-schemas.md  pivot-disposition.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json  windsurf.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
core/: pyproject.toml
core/src/ww_core/: briefs.py  cli.py  db.py  models.py  pitches.py  schema.sql
data/briefs/: richbond-us-hybrid-pilot-2026q2.yaml  richbond-us-institutional-pilot-2026q2.yaml
data/knowledge/: richbond-kb.md
data/pitches/: richbond.yaml
data/scouting/: lessons.md  methods.md  playbook.md
data/strategies/: 01-supply-diversification.md  02-tco-cost-per-bed-night.md  03-engagement-tiered-followup.md
engine/: README.md  pyproject.toml  schema_engine.sql
engine/ops/: crontab.example  smoke_draft.py
engine/src/ww_engine/: __init__.py  cli.py  cost.py  db.py  detector.py  feedback.py  intake.py  knowledge.py  logging.py  modes.py  research.py  rotation.py  runs.py  selection.py  sender.py
engine/src/ww_engine/drafting/: __init__.py  base.py  claude_code.py  grounded.py  personalization.py
engine/tests/: conftest.py
engine/tests/contract/: test_drafter.py
engine/tests/integration/: test_experiment_mvp.py  test_us1_review_errors.py  test_us1_review_happy.py  test_us2_autonomous_errors.py  test_us2_autonomous_happy.py  test_us3_hardstop_errors.py  test_us3_hardstop_happy.py
engine/tests/unit/: test_cost.py  test_db_migration.py  test_detector_unit.py  test_experiment_foundation.py  test_rotation.py  test_selection.py  test_sender_window.py
evaluation/: .env.example  .gitignore  README.md  pyproject.toml
evaluation/src/ww_evaluation/: __init__.py  cli.py  runner.py  scorer.py
evaluation/src/ww_evaluation/backends/: base.py  brave.py  exa.py  perplexity.py  serper.py  tavily.py
evaluation/src/ww_evaluation/email_backends/: apollo.py  base.py  hunter.py
evaluation/src/ww_evaluation/ground_truth/: richbond.yaml
evaluation/src/ww_evaluation/llm/: base.py  claude.py
evaluation/src/ww_evaluation/queries/: base.py  richbond.py
knowledge/: INDEX.md  architecture.md  engineering.md  operations.md  product.md  technique.md
llm/: pyproject.toml
llm/src/ww_llm/: __init__.py  base.py  config.py  registry.py
llm/src/ww_llm/engines/: __init__.py  _openai_compatible.py  anthropic_api.py  claude_subscription.py  deepseek.py  openai.py
llm/tests/: test_engine_contract.py  test_registry.py
outreach/: .env.example  README.md  pyproject.toml  test-message.txt
outreach/src/ww_outreach/: auth.py  cli.py  send.py
outreach/tests/: test_auth.py  test_send.py
research/: README.md
research/topics/: 01-search-algorithms.md  02-web-search-stack.md  03-agent-loops.md  04-rag-fundamentals.md  05-b2b-contact-discovery.md  06-llm-orchestration.md  08-china-plus-one-sourcing.md
research/topics/07-vendor-deep-dives/: apollo.md  brave.md  clay.md  exa.md  hunter.md  perplexity.md  serpapi.md  tavily.md
scout/: README.md  pyproject.toml
scout/src/ww_scout/: cli.py  cost.py  db.py  logging.py
scout/src/ww_scout/enrichment/: __init__.py  base.py
scout/src/ww_scout/qualification/: __init__.py
scout/src/ww_scout/sources/: base.py  cms_nursing_home.py
scout/tests/: conftest.py
scout/tests/contract/: test_backends.py
scout/tests/unit/: test_cost.py  test_migration.py
specs/001-dashboard-skeleton/: spec.md
specs/001-dashboard-skeleton/checklists/: requirements.md
specs/002-outreach-campaign-engine/: data-model.md  email_decisions.md  email_foundation.md  email_playbook.md  email_structure.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-outreach-campaign-engine/checklists/: requirements.md
specs/002-outreach-campaign-engine/contracts/: cli.md  db-migration.md  detector.md  drafter.md
specs/003-scout-enrichment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-scout-enrichment/contracts/: cli.md  db-migration.md  email-backend.md  engine-registry.md  judge.md  search-backend.md
specs/004-proof-of-life-experiment/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/004-proof-of-life-experiment/contracts/: cli.md  drafter.md  research.md
tracking/: Dockerfile  README.md  pyproject.toml
tracking/deploy/: Caddyfile  RUNBOOK.md  docker-compose.yml  ww-tracking.service
tracking/src/ww_tracking/: app.py  cli.py  db.py
