[project]
name = "ww-core"
version = "0.1.0"
description = "Winston Wolf core — shared data layer (lead database, brief/pitch loaders) for all components."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
ww-core = "ww_core.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ww_core"]
