[project]
name = "ww-engine"
version = "0.1.0"
description = "Winston Wolf outreach campaign engine — self-running 3-touch sequencing, drafting seam, reply/bounce hard stop, cost accounting."
requires-python = ">=3.11"
dependencies = [
    "ww-core",
    "ww-outreach",
    "typer>=0.12",
    "rich>=13.0",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
ww-core = { path = "../core", editable = true }
ww-outreach = { path = "../outreach", editable = true }

[project.scripts]
ww-engine = "ww_engine.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ww_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
