[project]
name = "ww-evaluation"
version = "0.1.0"
description = "Winston Wolf vendor evaluation harness — runs search and contact-data queries against multiple vendor backends, scores against per-customer ground truth."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "exa-py>=1.0.0",
    "tavily-python>=0.5.0",
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ww-eval = "ww_evaluation.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ww_evaluation"]

[tool.hatch.build]
include = [
    "src/ww_evaluation/**/*.py",
    "src/ww_evaluation/**/*.yaml",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
