[project]
name = "ww-llm"
version = "0.1.0"
description = "Winston Wolf LLM engine room — per-tool LLM engine registry with swappable provider adapters."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ww_llm"]
