[project]
name = "ww-outreach"
version = "0.1.0"
description = "Winston Wolf Outreach — send emails from a Microsoft 365 mailbox via Microsoft Graph."
requires-python = ">=3.11"
dependencies = [
    "msal>=1.28",
    "requests>=2.31",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.scripts]
ww-outreach = "ww_outreach.cli:app"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ww_outreach"]
