[project]
name = "ww-scout"
version = "0.1.0"
description = "Winston Wolf Scout — discover leads from public sources and write them to the shared lead database."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
ww-scout = "ww_scout.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ww_scout"]
