[project]
name = "ww-tracking"
version = "0.1.0"
description = "Winston Wolf tracking server — open pixel + click redirector, writes events to the lead database."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
ww-tracking = "ww_tracking.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ww_tracking"]
